--- a/src/App.scss
+++ b/src/App.scss
@@ -20,17 +20,20 @@
 
 
 .container {
-  max-width: 850px;
+  width: 300px;
+  height: 300px;
   margin: 30px auto;
 }
 
 .row {
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: auto;
 }
 
 .col {
-  border: 1px solid #2d2d2d;
+    border: 1px solid #2d2d2d;
     min-width: 50px;
     min-height: 50px;
     background: #ecf0f1;
