--- a/src/memory-mosaic/style/index.scss
+++ b/src/memory-mosaic/style/index.scss
@@ -7,7 +7,7 @@ $white: #fff;
   color: $white;
 
   background:  $background-color;
-  padding: 30px;
+  padding: 30px 10px;
   // height: 100%;
   // display: flex;
 
