--- a/src/memory-mosaic/style/index.scss
+++ b/src/memory-mosaic/style/index.scss
@@ -20,19 +20,86 @@ $pink: #FD297D;
   .field {
     height: 375px;
     margin: 7px auto 50px;
+    position: relative;
+    z-index: 2;
+
+    @media (max-width: 375px) {
+      height: 300px;
+      width: 300px;
+    }
+    // background: url('../../assets/images/pat-t.png') top left, ;
+    // background-position: top left;
+    // padding-left: 100px;
+    // margin-left: -100px;
+
+    &::before {
+      z-index: 1;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: -20px;
+      left: -100px;
+      background: url('../../assets/images/pat-t.png') no-repeat;
+    }
+
+    &::after {
+      z-index: 1;
+      content: '';
+      display: block;
+      width: 186px;
+      height: 246px;
+      position: absolute;
+      bottom: -53px;
+      right: -43px;
+      background: url('../../assets/images/patt-bottom.png') no-repeat;
+    }
+
+    @media (max-width: 375px) {
+      height: 300px;
+      width: 300px;
+
+      &::before,
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  .row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    &:first-of-type .cell {
+      border-top: 0;
+    }
   }
 
   .cell {
-    outline: 2px solid $background-color;
+    box-sizing: border-box;
+    border: 1px solid $background-color;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 3em;
+    z-index: 3;
     // padding: 1px;
-    &:hover, &:focus, &:active {
-      background: $white;
+
+    &:first-child {
+      border-left: 0;
     }
+
+    &:last-child {
+      border-right: 0;
+    }
+    
+    &:hover, &:focus, &:active {
+      // background: $white !important;
+    }
+  
   }
 
   .lives {
