Added particles in header on Home Page

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -22,7 +22,7 @@ $white: #fff;
 
     .header-text {
       // align-self: flex-start;
-      padding-top: 400px;
+      // padding-top: 400px;
       text-align: center;
 
       span {
