--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -85,6 +85,12 @@ $radius: 3px;
       color: darken($item-bg, 35%);
       font-size: 7rem;
       margin-bottom: 35px;
+
+
+      &.dark-bg {
+        box-shadow: 0px 0px 2px 2px rgba(0,0,0, .09);
+        background-color: rgba(0,0,0, .13);
+      }
     }
   }
 }
