Stylized MM game page

--- a/src/shared/modals/style.scss
+++ b/src/shared/modals/style.scss
@@ -4,4 +4,14 @@ $white: #fff;
 .modal-dark {
   background-color: $bg;
   color: #fff;
+
+  & > a {
+    left: auto;
+    right: 5px;
+    top: 5px;
+
+    circle {
+      fill: transparent;
+    }
+  }
 }
