--- a/src/memory-mosaic/style/index.scss
+++ b/src/memory-mosaic/style/index.scss
@@ -6,10 +6,27 @@ $background-color: lighten(#2F273E, 3%);
 $white: #fff;
 $pink: #FD297D;
 
+.memory-mosaic-wrapper {
+  background-color: $background-color;
+  min-height: 100vh;
+
+  .memory-mosaic-header {
+    color: #fff;
+    text-align: center;
+    font-weight: 300;
+    padding: 30px 0;
+
+    .title {
+      font-size: 24px;
+    }
+  }
+}
+
 .memory-mosaic {
   color: $white;
   background:  $background-color;
   padding: 30px 10px;
+  text-align: center;
 
   .game-container {
     max-width: 375px;
